[project]
name = "simple-reasoning-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab",
    "pydantic",
    "langchain",
    "langchain-core",
    "langgraph",
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.9",
    "loguru>=0.7.3",
    "langchain-experimental>=0.3.4",
    "langchain-tavily>=0.2.11",
]
